shifts big ones - and new tocs

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -14,8 +14,9 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
     really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
     -   [Research Questions - March
         2024](#research-questions---march-2024)
-        -   [Word count](#word-count)
     -   [Introduction](#introduction)
+        -   [Table of varied GDP use with supporting
+            evidence](#table-of-varied-gdp-use-with-supporting-evidence)
     -   [Extract and commentary on Vignette
         2](#extract-and-commentary-on-vignette-2)
     -   [Use of GDPs in the cultural plane / community level of
@@ -44,16 +45,25 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
     -   [The role of GDPs in the personal appropriation of concepts and
         processes (500 - Target
         750)](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes-500---target-750)
-    -   [Discussion](#discussion)
-        -   [Discussion of findings in relation to CHAT conceptions of
-            abstraction](#discussion-of-findings-in-relation-to-chat-conceptions-of-abstraction)
-        -   [Design patterns as a intermediate-level, pedagogical
-            framework compared to computational
-            thinking](#design-patterns-as-a-intermediate-level-pedagogical-framework-compared-to-computational-thinking)
-        -   [Implications for
-            practitioners](#implications-for-practitioners)
-            -   [Table of varied GDP use with supporting
-                evidence](#table-of-varied-gdp-use-with-supporting-evidence)
+    -   [Reduced discussion section](#reduced-discussion-section)
+    -   [Observations on emerging flexible design practices (MORE ON
+        INTERPERSONAL
+        LEVEL)](#observations-on-emerging-flexible-design-practices-more-on-interpersonal-level)
+        -   [Observations and evidence on flexible design
+            practice](#observations-and-evidence-on-flexible-design-practice)
+        -   [Discussion on Flexible Design
+            Practices](#discussion-on-flexible-design-practices)
+            -   [The potential of emergent "non-productive" activities -
+                DROP?](#the-potential-of-emergent-non-productive-activities---drop)
+        -   [Discussion in relation to other
+            research](#discussion-in-relation-to-other-research)
+            -   [- beyond design cycle
+                stages](#beyond-design-cycle-stages)
+            -   [On Game Jamming](#on-game-jamming)
+        -   [Implications for practitioners - MOVE
+            LATER?](#implications-for-practitioners---move-later)
+        -   [Returning to the table of varied GDP use with supporting
+            evidence](#returning-to-the-table-of-varied-gdp-use-with-supporting-evidence)
     -   [Conclusion](#conclusion)
     -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
         -   [MOVED FROM GUIDED
@@ -112,6 +122,19 @@ In the previous chapter, I outlined the evolution of tool use, emphasising emerg
 
 Regarding the structure of this chapter, it begins with a vignette of parent-child interaction during the game-making process to contextualise the findings that follow. The chapter then presents a systematic analysis of participants’ varied uses of game design patterns, drawing on detailed observations of recorded video data. For this analysis, I employ Rogoff's three planes of analysis [@rogoff_observing_1995], as introduced in Chapter four. Recognising that these observations do not neatly align with the three planes, I discuss the use of GDPs across cultural activities, interpersonal activity and personal knowledge in three distinct sections. These sections focus on how gameplay design patterns are utilised by parents, children and facilitators, each through the lens of the respective analytical plane. An analogy can be drawn between these three planes of analysis and the examination of activity systems at varying scopes. Specifically, the cultural plane aligns with the community scope of activity described in Figure 5.x in the previous chapter, while the interpersonal and personal planes correspond to smaller scopes depicted in Figure 5.x. A discussion section explores the implications of these findings in relation to existing research and theoretical concepts. This discussion considers the examples of GDP use in practice to analyse GDPs as a mid-level construct, demonstrating their utility for both educational designers and researchers.
 
+
+
+#### Table of varied GDP use with supporting evidence
+
+The following table outlines the principle different uses of GDP in the data analysed. The next to last column lists example behaviour and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis. The final column indicates how many of the 12 session transcriptions the behaviour was found within.
+
+<!-- Instead the potential of this learning design is of most value.   -->
+
+INSERT SUMMARY TABLE FROM HERE -
+https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
+
+
+
 <!--
 _extending the use of GDPs beyond the initial use to diverse mediational uses and component parts of emerging making repertoires & Identifying GDPs as a germ cell/ unit of analysis_ -->
 
@@ -156,7 +179,6 @@ The resulting coding structure is available online here.
 https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/edit# -->
 
 
-Outer pipes Cell padding
 
 | Suzanna: I’ll reload it. Here you go                                                                                                                                                                                                                                                                                  | Suzanna presses refresh key to reload the preview  game view to reflect the changes that have just been made. |
 | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------- |
@@ -715,78 +737,6 @@ The ongoing reflection provoked by the process of privileging social and cultura
 
 <!-- Here learner agency is transformative not only of personal dimensions of learning but also the cultural setting, practices and tools available to learners. The process of playtesting other games allowed participants to share their on emerging interpretations of game making concepts like game feel and challenge without being directly taught. Further, the community sense of what is appropriate of fun evolves as mutually and therefore cannot be taught explicitly. -->
 
-## Discussion
-
-The majority of this chapter has focused on findings and immediate interpretation of participant and facilitator use of GDPS as a mediational strategy / repertoire. This section takes a step back to explore the wider perspectives of the findings beyond the immediate context to digital making and project based approaches and understandings of design patterns in educational contexts.
-
-In this discussion section, I:
-
-- explore the uses of GDPs in relation to varied conceptions of abstraction, chiefly CHAT and CT
-
-- propose that GDPs provide a suitable way to engage with coding practices partly due to their position between abstract computational concepts and concrete implementations of code structures.
-
-- explore potential implications for facilitators and researchers on use of GDP collection as an  intermediate pedagogical construct.
-
-### Discussion of findings in relation to CHAT conceptions of abstraction
-
-The previous section began to explored, through the lens of personal appropriation, to variety of skills suitable for development via this learning design. The final section surfaced a  distinction between curricular contents commonly associated with a more abstract understandings of personal knowledge, including more abstract elements of computation thinking. This section continues an interpretation of this chapters findings and an socio-cultural understanding of learning using activity theory as a framework. This investigation has required a careful investigation of abstract-concrete dimensions of emerging knowledge happening in the game making and digital making more generally. To start, let us consider the nature of the abstraction of gameplay design patterns via Sannino' [-@sannino_activity_2011] distinction between empirical and theoretical abstraction.
-
-    "While observation and categorization are actions at the root of empirical abstraction, practical transformation, change, and experimentation are actions at the root of theoretical abstraction. Theoretical abstraction allows one to generate and project complex, theoretically mastered concrete manifestations and developmental forms of the reality under scrutiny. A theoretical abstraction is based on a functional relationship, also called a germ cell." [@sannino_activity_2011].
-
-<!-- There are two types of abstractions: empirical and theoretical. Empirical abstraction
-is a classification of superficial features of phenomena. Theoretical abstraction refers to the identification of the genetic origins of phenomena that may externally be not alike at all. A theoretical abstraction is based on a functional relationship, also called a germ cell.  While observation and categorization are actions at the root of empirical abstraction, practical transformation, change, and experimentation are actions at the root of theoretical abstraction. Theoretical abstraction allows one to generate and project complex, theoretically mastered concrete manifestations and developmental forms of the reality under scrutiny
-Title: Activity theory as an activist and interventionist theory, Author: Sannino, Date: 10/2011 -->
-<!-- A deeper exploration of other concepts may suit another chapter looking at synthesing observations in relation to broader research.  -->
-
-In this research, the empirical level of abstraction is  present in P1 and in P2 where features to be added to the game were classified gameplay features and categorised according to to the existing MDA framework. Moving beyond the empirical towards the theoretical aspect, is the early positioning of each feature as a gameplay design pattern which can be described and supplemented with a suggested code structures and examples.
-ANY OTHERS
-
-The key, guiding conception here becomes the pedagogical utility of a strong coupled link between a feature of an observable game product (in this case gameplay design patterns) and scaffolding resources available within a community. This concept becomes the root of the varied approaches and forms of support outlined in this chapter. Some instances based on this kernel concept were created by myself in response to user requests in varied forms of support documentation outlined in Chapter 5 ( e.g. quick start cards, a home menu of GDPs, code snippets, stepped tutorials ). Many other examples, as outlined above were more spontaneous and informal, spreading from peer to peer in the community often during playtesting.  
-
-The process of identifying and working with GDPs in this research process can be mapped as a dialectical process of moving (rising) to the concrete [@sannino_activity_2011]. It is this movement from a kernel idea into varied concrete instances that is the root of the power of the approach according to CHAT scholars.  While, the varied uses as meditational strategies and their integration into varied concrete forms of creative cultural and interpersonal repertoires many be particular to this setting, the germ cell concept described above is a theoretical and generalisable abstraction not particular to this context.
-
-While the educational use of design patterns and has been explored in other settings via research, the focus has been on professional rather than novice learners.  
-
-While I address areas for future research in the conclusion, a proposed benefit of this research is While understanding the process is more obviously useful for facilitators - it may be helpful to participants as well as they build familiarity with frameworks of features of multimedia projects.to underscore the potential and to uncover a starting point for pedagogies that can be transferred to diverse design projects.
-
-<!-- While understanding the process is more obviously useful for faciliators - it may be helpful to participants as well as they build familiarity with frameworks of features of multimedia projects. -->
-
-
-
-
-### Design patterns as a intermediate-level, pedagogical framework compared to computational thinking
-
-<!-- NOTE - PARTS OF THIS WERE MOVED TO THE LIT REVIEW. -->
-
-It is productive to ask: how can the use of GDPs as a framework be compared to that of computational thinking given CT's is a dominance in this area?
-
-In chapter two I described the characteristics and limits of computational thinking as a pedagogical framework, specifically concepts include: varied interpretations; the role of levels of abstraction for teachers and learners; and the value of epistemological pluralism as a way to value concrete approaches.
-
-<!-- Through this lens the most abstract activity system is the larger one who's objective, to make an engaging game that tells an environmental story, aligns with the problem level of LOA. The level between abstract and concrete is that of choosing, implementing and testing game design patterns, which aligns with design. The most concrete in this interpretation is then the implementation of different lines of code or creation and migration of digital assets. -->
-
-Waite's interpretation of levels of abstraction and semantic waves in a computing education context is potentially relevant as example of how can contribute to the debate in this area. In terms of semantic waves, the movement between abstract and concrete is helpful to address some of the issues concerning inclusion and accessibility of overly abstract approaches [@papert_epistemological_1990]. However, if we return to Papert and Turkle's [-@papert_epistemological_1990] challenge to the legitimacy of the primacy of abstract, top-down approaches to teaching coding, such an approach would also challenge Waite rationale of alternating between abstract and concrete poles.
-
-While, none of the author's above are clear about what exactly is meant by the abstract in their explorations, a synthesis of relevant literature supports an spectrum of abstraction, from Wing's take on CT at the most abstract, and specifics coding constructs or even syntax at the most concreted. Such a spectrum is in is broadly in line with LOA interpretation, although the purpose is shown as the higher level of abstraction. ANY DIFFERENCES?
-
-PERHAPS BRING UP UP TO DATE ISSUE OF TRANSFER. - BUT PERHAPS LEAVE FOR CONCLUSION. NOTE ALSO THE BALANCE BETWEEN CT CONCRETE SKILLS AND TRANSFER IN [@kynigos_modifying_2020]
-
-This direction of the findings of this chapter, support findings on design patterns in other contexts as a middle ground between abstract CT concepts and more concrete techniques.
-
-    In order to be useful, patterns must present an abstraction of good practice at a meaningful level of granularity. Formulations that are too abstract will be impractical in real design use; those that are too specific will be difficult to re-use in new scenarios.[@dearden_pattern_2006, p. 20]
-
-Such an interpretation is adopted by Eriksson and colleagues using gameplay design patterns with young people [-@eriksson_using_2019] which drew inspiration from the value of design patterns as a form of "intermediate-level concept" as advocated by fellow researchers as a way of sharing results of research [@barendregt_intermediate-level_2018].
-
-
-<!-- **In terms of recommendations for researchers / practitioners of an intermediate framework:** -->
-
-Turning to alignment with PBL research in digital making, as explored in the literature review a key challenge to project based learning is finding appropriate conceptual and practical frameworks to scaffold domain specific working practices to ameliorate the dialectical tension between engagement via tinkering and requirements to promote "principled understanding" [@barron_doing_1998, p.63]. Waite and colleagues propose that abstraction should be explicitly taught even to younger pupils [@waite_abstraction_2016]. Waite and colleagues [@waite_abstraction_2018-1] also propose the utility of awareness of LOA in terms of learners knowing at what level of abstraction they are operating, although the evidence is not representative and authors call for further research. As a challenge these findings, my own notes and reflections in appendix.learning map cautioned me against explicit teaching of abstraction and imposing shifts in perspectives for fear of interrupting the flow of participant making.
-
-<!-- As such this research has only more theoretical propositions rather than participant data. -->
-
-Despite this, in terms of participant experiences, it is clear from this chapters findings that learners _are_ shifting between LOA without explicit in the process of the use of and contribution to this learning design. Participant perspectives shift between the wider goal of making an engaging game for a real and imagined audience to a narrower goal of implementing a game design pattern and the technical actions and operations needed to complete it. This chapter has outlined the potential of GDP concepts, especially used within playtesting, to support these participant shifts in perspective. In this context I judged the imposition of an additional goal of understanding abstract curricular concepts as potentially counter productive to the overall aim of acculturation to game making tools and processes and developing an inclusive idioculture. I had a reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. My concern also reflected potential disorientation and reduced experiences of agency from imposed shifts of focus rather than self-initiated ones. I also propose that to further research to would be needed to justify the utility take the time to interrupt flow to explicitly teach abstraction, and abstract CT concepts, apart from if understanding of such concepts are required by curriculum constraints.
-
-On the other hand, my reflections support a proposition that there is utility for facilitators to be aware of the level of abstraction both that present in different elements of project learning design and that of the concepts that learners are working with. Different purposes and contexts of learning may require different interpretations, for example greater awareness of abstract concepts for reasons of assessment. According to [@barendregt_intermediate-level_2018], in their identification of design patterns as intermediate level construct, identifying a suitable the level of abstraction is recommended to best support the goals of learners FIND REASON.  Waite and colleagues [@waite_abstraction_2018-1], also identify the intermediate design level of the LOA model as that suitable for supporting grounded abstraction in learner coding. In computing eduction pattern based instruction has benefits of making complex problems more modular and concrete [@muller_almost_2004-1; @waite_teaching_2021]. The evidence and examples surfaced in this paragraph support a view of GDPs, as an productive intermediate-level framework and contributes a series of grounded pedagogical instances via examples. It also proposes GDPs as potentially more productive and accessible framework in terms of pedagogical uses than that of computational thinking when making games.
-
 
 
 
@@ -802,7 +752,120 @@ As previously explored I had a reluctance to shift learners away from the practi
 - Aesthetics and the end user experience motivated some users greatly, while it is not clear if this game code changes in this dimensions fully constitute a gameplay design pattern, they are an important inclusive element of the design. -->
 
 
-### Implications for practitioners
+## Reduced discussion section
+
+
+## Observations on emerging flexible design practices (MORE ON INTERPERSONAL LEVEL)
+
+<!-- NOTE To restructure. -->
+
+This section outlines additional video and observational evidence on community and social activity which contributes to the research area on project and design approaches to learning coding. This section outlines and analyses potential useful practices which I characterise as _flexible design practices_ used a counterpoint to a potentially more prescriptive interpretation of design thinking stages.
+
+This characterisation can be seen in some of the entries of the previous chapter which outlined  x, y and z.
+The use of GDPs here can be seen to be quite flexisble
+
+ This includes emerging norms, DoL, and community behaviour.  
+
+This section discusses some of the outcomes stemming from interventions and emergent participant responses in the area of peer and individual working practices.
+
+In Chapter 5, one of area of contractions was the dysfunctional group work which was freed up by allowing greater atomisation and greater scaffolding of tool use.
+
+<!-- Some barriers stemming from alienation from participant group working processes were resolved partly by freeing up some patterns of collaboration and interaction and removing others.
+
+The process of parents getting in the way of children's not minding jumping in and invading social space struck me. Together with the frustrations of complexities of larger group work the restrictions created a tension between the suggested community norm of how division of labour was organised.
+
+Thus in P2, rather than the larger groups of P1, smaller groups, allowing some children to work by themselves and others with parents. Avoiding large group fragmentation and encouraging freedom of participation vs benefiting from parental involvement.
+
+There is a flexibility here which is encouraged by informal moments of  playtesting
+
+These tensions are mirrored in similar research and were highlighted in the practitioner interviews that I conducted.
+ -->
+
+
+
+Chapter five outlined examples of GDPS being used as a lingua franca in playtesting sessions for a variety of collaborative work from feedback to direct requests for help from peers.
+
+ARE THERE ARE OTHER STUDIES WHICH ENCOURAGE THIS?
+
+#### Observations and evidence on flexible design practice
+
+Flexible design practices are often present in recorded data. Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint jamming created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisaion. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
+
+
+**Describing Design Cycles as a design process for novices**
+
+As explored in the literature review design stages as a conceptual design tool is common in CS education, e.g. Resnick's creative learning spiral [@resnick_all_2007, p. 2]. While I did not ask learners to follow prescribed design stages, in data analysis I created a coding theme based on a design cycle framework: Ask / Imagine, Plan, Create, Test, Improve, Share. When coding I observed that naturalistic practice rarely matched the progression of the design cycle. The stages were instead fragmented and sometimes happened in parallel. In many interactions I observed improvisational approaches which incorporated ideation, planning, implementation and testing in space of a minute or so. If I had encouraged participants to follow prescribed design stages this may have restrict this flexibility in practice. This concern is echoed in research which critiques a similar, staged approach to creative writing in primary education using a writing cycle approach.  [@kuby_rhizomatic_2016]
+
+In a closer review of key literature claims of of the value for participants of following design cycles are implied but not supported. Instead stages is are proposed as a tool to "discusses strategies for designing new technologies" [@resnick_all_2007, p. 2]. The following writing discusses the value of flexible approach to design processes observated in my research.
+
+### Discussion on Flexible Design Practices
+
+While the concept of Game Jams are established, the free form flexibility of the Jam process is often left to the skills and evolving practices of the participants.
+
+This section explores the process of jamming in the context of game making. While the processes identified are often improvised, there is a group element of the process where makers pick up techniques from other makers in the group. I propose the value of facilitators noticing and nurturing potentially productive practices.
+
+I propose that this process can have value in other areas of digital making.
+
+
+
+#### The potential of emergent "non-productive" activities - DROP?
+
+Much time in sessions was spent on activities that did not fit nearly into an accepted design stage, for example: opening software tools; navigating to correct locations; and finding past assets. These processes often  involved significant effort and collaboration between participants. For example the  migrating assets between authoring tools, converting to correct formats, evaluating new tools, and finding previously created assets. These are practices that I am personally familiar with. I call them digital laundry or digital housekeeping. Things that at times can be low attention span. Faff time is even less productive switching on the computer and waiting for the internet to connect, waiting for a family member to finish their rushed lunch or navigating to the right location in creative software.
+
+ <!-- I have been pragmatic and map elements like this these loosely. Where appropriate I make notes on that activity in free form areas of other documents like spreadsheets. -->
+ <!-- This limits claims I can make from the coded data. However it raises interesting points which merit discussion. -->
+
+
+Skills to perform these activities were at often distributed between different family members. For some adult re-enforcing their identities as project managers, and for young participants forming identities as digital specialists. I noted in analysis of data that along with frustration there are also moments of creativity, and there are bonding moments which appear to be helped by this activity which is at times quite unfocused but also shared. In retrospect, many of the social missions explored above encouraged activity outside of established design stages. For example the lively discussion about game playing in response to the mission to _find out the favourite games of 3 other people_.
+
+The process of swapping graphical assets used a shared Piskel gallery and games area which served to keep individuals informed in directly of progress being made, and to spark curiosity in the creations of others.
+
+In addition, I observed that navigating these essential but non-creative tasks in a collaborative and playful way can reduce learner anxiety and help maintain a positive affect to the overall creative digital process. This observation is supported by an example in the next chapter available in appendix 5.x - an extract of which is included below.
+
+| Participant Dialogue          | Participant Gestures & Activities              
+|----------------|----------------|
+|   |  Nadine has just rapidly demonstrated how to bring a created graphical element into the game |
+|      **Molly:** How did you do that so quickly? I’ve got to like, carefully...  |  Molly makes hand gestures to show a sense of hesitant keyboard use)  |
+|  | A parent peer next toA Molly laughs.      <br/>    Nadine, the child of Molly bounces up in place and smiles broadly.    |
+
+In summary, it is of value to create spaces to leverage the potential of these in-between moments for participants.
+
+The potential impact on agency is as follows; If these tasks can be seen as more than mere barriers to production, and therefore to be designed out to increase instrumental agency, then there is potential to increase relational agency through flexible divisions of labour that allow the incorporation of home roles in to this new learning space. Thus a potential affordance to find identify and specialism here.
+
+This a concept is developed later in this discussion.
+
+
+
+### Discussion in relation to other research
+
+#### - beyond design cycle stages
+
+These observations of the value of flexible design processes, invite discssion on how best to conceptualise and support these flexible approaches. Game Jams are accelerated events encouraging creative collaboration and innovation. While the event's premise is to promote collaboration, these events are inconsistent in their support and scaffolding of collaborative approaches [@goddard_playful_2014].
+
+Other relevant perspectives include rhizomatic design approaches  [@de_freitas_classroom_2012]. Research exists on the promise of rhizomatic approaches design thinking in creative educational programmes [@biffi_chasing_2017-1]. However researcher identify significant competencies required including to "identify and synthesize the body of technical and even complex knowledge into a feasible structure" [@biffi_chasing_2017-1, p. 972], which are not well-aligned with the age group of this context.
+
+However, in this context the link is imiled or ther eare otehr problems with framing as rhizomatic metaphor in terms of communicating the essence of the flexible approach beyond academic audience.  
+
+#### On Game Jamming
+
+So instead of rhizomatic design process, I propose that the tools, process and the community in this study mutually encourage an improvisational approach often referred to as jamming.
+
+NOTE - Explore jamming in relation to lit review concepts and data of the chapter.
+
+There are disparate resources available for game jams but due to the adult centric audience and mix of abilities they are less guided in nature than many supported design processes aimed at school age audiences.
+
+
+Recent research posits that Game Jams can be profitably used in formal education contexts [@aurava_game_2021], although there is scant guidance on how to address potentially problematic issues (list these). A complementary approach would be to significantly adapt the overall Game Jam format and to add greater scaffolding to the process as in the learning design of this research.
+
+Examples - move examples up?
+
+Within the concept of jamming, activity which is casual seemingly non-productive can still transmit useful information to guide collaborative practices. As per above and examples in Appedix ? Find.
+
+I propose that the concept of jamming can be introduced and supported as a way of encouraging co-development of practices and making styles as proposed by Gutiérrez and Rogoff [@gutierrez_cultural_2003]
+
+
+
+### Implications for practitioners - MOVE LATER?
 <!--
 RETURNING TO WHAT IS FOUND IN THE DATA - A CELEBRATION OF THE CONCRETE - AND UTITILY OF THE MID - LEVEL APPROACH -->
 
@@ -813,9 +876,9 @@ In many of the outlined uses of GDPs in chapter we can see processes at play tha
 This approach is aligned to inductive research processes. Finding useful abstractions only after immersing ones-self in the detail. Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation.
 
 
-#### Table of varied GDP use with supporting evidence
+### Returning to the table of varied GDP use with supporting evidence
 
-The following table outlines the principle different uses of GDP in the data analysed. The next to last column lists example behaviour and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis. The final column indicates how many of the 12 in-depth session transcriptions the behaviour was found within.
+The introduction introduced the summary table. I now return with a greater focus on the scope of the claims of this research, implications for facilitators and how the findings link to the contents of the following chapter.
 
 <!-- Instead the potential of this learning design is of most value.   -->
 
@@ -823,6 +886,7 @@ INSERT SUMMARY TABLE FROM HERE -
 https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
 
 
+**What are the limits of the claims of this research?**
 
 It is important to recall the purpose and limitation of these figures outlined in Chapter 4, that this is not designed to claim efficacy of the learning design or to be representative of an average participant (which would require follow up studies of different design).
 
@@ -852,7 +916,7 @@ Examples include;
 - supporting reflection on design and coding concepts / skills.
 - navigation / organisational support - use of a physical map.
 
-For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which could then be discussed, ticked off or otherwise reflected on. -->
+For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which 17th Jan 2025 - Supervisions Notescould then be discussed, ticked off or otherwise reflected on. -->
 
 
 
@@ -868,9 +932,6 @@ The observations of this chapter show the advantages of GDP as an intermediate, 
 On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies which can involved into repertoires of practice [@lecusay_telementoring_2015; @gutierrez_learning_2019-1]. These concepts and this framing of learning as participation in community repertoires, are explored in the next chapter in relation to participant agency using examples that extend beyond the use of GDPs to other cultural processes. While the development of agency has not been the primary focus of this chapter, the processes of community adaptation of GDP use can be directly linked to conceptions of transformative agency explored in Chapter 4. The next chapter explores cultural aspects in greater detail continuing to explore emergent agency in this research.
 
 <!-- **Transition to next chapter on agency** -->
-
-
-
 
 <!-- Examples of this dynamic agency include the use of graphical code structures, asking for peer or facilitator support etc. -->
 <!-- While the process of direction may be less totally learner-driven approach than the first iteration of the learning design P1, working with a starting menu of game patterns with support still provides challenges to learners and complexity of working processes. Design blockages still occur, and participants have to work with facilitators in depth to overcome issues. There is the possibility to adapt existing patterns, to add new patterns from outside the curated collection or to shift to new game paradigm requiring a different set of patterns altogether. -->
