--- a/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
@@ -2,8 +2,9 @@
     really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
     -   [Research Questions - March
         2024](#research-questions---march-2024)
-        -   [Word count](#word-count)
     -   [Introduction](#introduction)
+        -   [Table of varied GDP use with supporting
+            evidence](#table-of-varied-gdp-use-with-supporting-evidence)
     -   [Extract and commentary on Vignette
         2](#extract-and-commentary-on-vignette-2)
     -   [Use of GDPs in the cultural plane / community level of
@@ -32,16 +33,25 @@
     -   [The role of GDPs in the personal appropriation of concepts and
         processes (500 - Target
         750)](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes-500---target-750)
-    -   [Discussion](#discussion)
-        -   [Discussion of findings in relation to CHAT conceptions of
-            abstraction](#discussion-of-findings-in-relation-to-chat-conceptions-of-abstraction)
-        -   [Design patterns as a intermediate-level, pedagogical
-            framework compared to computational
-            thinking](#design-patterns-as-a-intermediate-level-pedagogical-framework-compared-to-computational-thinking)
-        -   [Implications for
-            practitioners](#implications-for-practitioners)
-            -   [Table of varied GDP use with supporting
-                evidence](#table-of-varied-gdp-use-with-supporting-evidence)
+    -   [Reduced discussion section](#reduced-discussion-section)
+    -   [Observations on emerging flexible design practices (MORE ON
+        INTERPERSONAL
+        LEVEL)](#observations-on-emerging-flexible-design-practices-more-on-interpersonal-level)
+        -   [Observations and evidence on flexible design
+            practice](#observations-and-evidence-on-flexible-design-practice)
+        -   [Discussion on Flexible Design
+            Practices](#discussion-on-flexible-design-practices)
+            -   [The potential of emergent "non-productive" activities -
+                DROP?](#the-potential-of-emergent-non-productive-activities---drop)
+        -   [Discussion in relation to other
+            research](#discussion-in-relation-to-other-research)
+            -   [- beyond design cycle
+                stages](#beyond-design-cycle-stages)
+            -   [On Game Jamming](#on-game-jamming)
+        -   [Implications for practitioners - MOVE
+            LATER?](#implications-for-practitioners---move-later)
+        -   [Returning to the table of varied GDP use with supporting
+            evidence](#returning-to-the-table-of-varied-gdp-use-with-supporting-evidence)
     -   [Conclusion](#conclusion)
     -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
         -   [MOVED FROM GUIDED
